--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,6 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "Prospero"
+name = "Prospero Oi Oi Oi"
 authors = [{name = "LJMU", email = "prospero@ljmu.ac.uk"}]
 dynamic = ["version", "description"]
