--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,13 +1,17 @@
 version: 2
 
+# Set the OS, Python version and other tools you might need
 build:
-  os: "ubuntu-20.04"
+  os: ubuntu-22.04
   tools:
-    python: "3.8"
-
+    python: "3.11"
 
 sphinx:
   fail_on_warning: false
 
 formats:
   - pdf
+
+ python:
+   install:
+     - requirements: docs/requirements.txt
