--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,7 @@ build:
 
 sphinx:
   fail_on_warning: false
-  configuration: docs/conf.py
+  configuration: docs/source/conf.py
 
 formats:
   - pdf
